# operational-evidence-plane

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_question.yml
.github/workflows/: verify.yml
demo/: pyproject.toml
demo/prompts/: code_review_agent.md
demo/scripts/: check_replay_state.py  run_approval_escalation_counterfactual.py  run_budget_per_run_counterfactual.py  run_code_review_demo.py  run_compound_reliability_counterfactual.py
demo/src/oep_demo/: __init__.py  cli.py  counterfactual.py  paths.py  runner.py
demo/src/oep_demo/resources/fixtures/: diff_synthetic_001.patch
demo/src/oep_demo/resources/model/: deterministic_mock_reviewer.md
demo/src/oep_demo/resources/state/: replay_state_recipe.md
demo/state/: replay_state_recipe.md
docs/: architecture.md  counterfactual_replay.md  decision_log.md  landscape.md  public_claims.md  quickstart_walkthrough.md  record_keeping_reference.md  release_checklist.md  schema_migration_v0.3.md  schema_reference.md  schema_versioning.md
events/: pyproject.toml
events/examples/human_review/: context_code_review.md  human_review_approved.v0.json  human_review_rejected.v0.json
events/schema/: agent_step_event.v0.schema.json  human_review_event.v0.schema.json
events/scripts/: check_agent_step_event.py  demo_human_review_reconstruct.py
events/src/oep_events/: __init__.py  paths.py
events/src/oep_events/resources/examples/: code_review_agent_denied_step.v0.json  code_review_agent_step.v0.json
events/src/oep_events/resources/schema/: agent_step_event.v0.schema.json
examples/incident_reconstruction/: README.md  case_study.md  evidence_index.v0.json  model_budget_counterfactual.v0.json
examples/incident_reconstruction/counterfactual/: budget_per_run_counterfactual.v0.json  budget_per_run_counterfactual.v0.jsonl
integrations/: __init__.py
integrations/decision-trace-reconstructor/: README.md  code_review_agent.jsonl  code_review_agent_denied.jsonl
integrations/decision-trace-reconstructor/scripts/: to_dtr_jsonl.py
integrations/langgraph/: README.md  __init__.py  mapping.v0.yaml
integrations/langgraph/examples/: code_review_langgraph_checkpoint.v0.json
integrations/langgraph/scripts/: __init__.py  to_oep_permission.py
integrations/mcp/: README.md  __init__.py  mapping.v0.yaml
integrations/mcp/examples/: code_review_mcp_tool_call.v0.json
integrations/mcp/scripts/: __init__.py  to_oep_permission.py
manifest/: pyproject.toml
manifest/examples/: code_review_agent_release.v0.json
manifest/schema/: release_manifest.v0.schema.json
manifest/scripts/: check_release_manifest.py  update_manifest_digests.py
manifest/src/oep_manifest/: __init__.py  cli.py  paths.py
manifest/src/oep_manifest/resources/examples/: code_review_agent_release.v0.json
oep_verify/: __init__.py  artifacts.py  cli.py  resources.py  scenarios.py  verify_support.py
permissions/: pyproject.toml
permissions/examples/: code_review_tool_permission.v0.json  code_review_tool_permission_denied.v0.json
permissions/policy/: tool_permissions.rego
permissions/policy/counterfactual/: approval_per_step_escalation.rego  approval_per_step_escalation_test.rego  budget_per_run_cap_test.rego  compound_reliability_step_bound.rego  compound_reliability_step_bound_test.rego  oep_test.rego
permissions/policy/input/: code_review_write_diff.json
permissions/schema/: tool_permission_packet.v0.schema.json
permissions/scripts/: check_tool_permission_packet.py  update_permission_digests.py
permissions/src/oep_permissions/: __init__.py  paths.py  replay.py
permissions/src/oep_permissions/replay/: __init__.py  opa.py  records.py  storage.py  surfaces.py  wrapper.py
permissions/src/oep_permissions/resources/examples/: code_review_tool_permission.v0.json  code_review_tool_permission_denied.v0.json
permissions/src/oep_permissions/resources/policy/: tool_permissions_test.rego
permissions/src/oep_permissions/resources/policy/counterfactual/: budget_per_run_cap.rego  oep.rego
permissions/src/oep_permissions/resources/policy/input/: code_review_read_diff.json
permissions/src/oep_permissions/resources/schema/: counterfactual_replay.v0.schema.json  tool_permission_packet.v0.schema.json
playbooks/: pyproject.toml  rollback_reconstruction.md
playbooks/examples/: code_review_denied_reconstruction_packet.v0.json
playbooks/scripts/: check_reconstruction_packet.py
playbooks/src/oep_playbooks/: __init__.py  cli.py  paths.py
playbooks/src/oep_playbooks/resources/examples/: code_review_reconstruction_packet.v0.json
playbooks/src/oep_playbooks/resources/schema/: reconstruction_packet.v0.schema.json
replay/: counterfactual_replay.v0.schema.json
replay/scripts/: check_counterfactual_replay.py  check_counterfactual_replay_schema.py  check_v03_features.py
scripts/: check_package_build.py  check_public_docs.py  sync_packaged_resources.py
tests/: conftest.py  helpers.py  test_counterfactual_replay.py  test_demo_runner.py  test_integrations_dtr.py  test_packaging_digests.py  test_replay_cli.py  test_replay_opa.py  test_replay_storage.py  test_verify_scripts.py  test_verify_support.py
traces/: pyproject.toml
traces/schema/: eval_result.v0.schema.json
traces/scripts/: check_eval_result.py  check_operational_trace.py
traces/src/oep_traces/: __init__.py  paths.py
traces/src/oep_traces/resources/examples/: code_review_agent_denied_eval.v0.json  code_review_agent_denied_trace.v0.json  code_review_agent_eval.v0.json  code_review_agent_trace.v0.json
traces/src/oep_traces/resources/schema/: operational_trace.v0.schema.json
translations/bedrock/: README.md  layer_mapping.md  runtime_mapping.md  source_notes.md
translations/bedrock/examples/: code_review_bedrock_translation.v0.json
translations/bedrock/schema/: bedrock_translation.v0.schema.json
translations/bedrock/scripts/: check_bedrock_translation.py
