[build-system]
requires = ["setuptools>=77,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oep-demo"
version = "0.1.0"
requires-python = ">=3.11,<4"
description = "Deterministic demo package for the Operational Evidence Plane"
readme = "../README.md"
license = "Apache-2.0"
authors = [{name = "Oleg Solozobov"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["oep_demo"]

[tool.setuptools.package-data]
oep_demo = ["py.typed", "resources/fixtures/*.patch"]
