[build-system]
requires = ["setuptools>=77,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oep-events"
version = "0.1.0"
requires-python = ">=3.11,<4"
description = "Runtime event package for the Operational Evidence Plane"
readme = "../README.md"
license = "Apache-2.0"
authors = [{name = "Oleg Solozobov"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["oep_events"]

[tool.setuptools.package-data]
oep_events = ["py.typed", "resources/schema/*.json", "resources/examples/*.json"]
